# src/modules/auth/controller.ts
@@ -2,7 +2,7 @@ import type { Request, Response } from 'express';
 import { AuthService } from './services.js';
 import { customParse } from '../../lib/zod.js';
 import { ValidationError } from '../../config/errors/errors.js';
-import { RegisterSchema, LoginSchema } from './schemas.js';
+import { RegisterSchema, LoginSchema, RefreshTokenSchema } from './schemas.js';
 
 export async function registerController(req: Request, res: Response) {
     const validation = customParse(RegisterSchema, req.body);
@@ -21,5 +21,15 @@ export async function loginController(req: Request, res: Response) {
     }
 
     const { data, message } = await AuthService.login(validation.data);
+    res.success(data, message);
+}
+
+export async function refreshTokenController(req: Request, res: Response) {
+    const validation = customParse(RefreshTokenSchema, req.body);
+    if (!validation.success) {
+        throw new ValidationError(validation.message);
+    }
+
+    const { data, message } = await AuthService.refreshToken(validation.data);
     res.success(data, message);
 }
